--- a/GP App/Base.lproj/Main.storyboard
+++ b/GP App/Base.lproj/Main.storyboard
@@ -2958,7 +2958,7 @@ Cg
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dataCell" id="Iq0-Wo-noL" customClass="FeaturedViewCell" customModule="GP_App" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="150" height="230"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hui-ny-jI8">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="230"/>
                                     <autoresizingMask key="autoresizingMask"/>
@@ -2966,19 +2966,26 @@ Cg
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sRP-ld-5YN">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="CnI-lG-448">
-                                            <rect key="frame" x="-1" y="200" width="150" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CnI-lG-448">
+                                            <rect key="frame" x="0.0" y="200" width="150" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="aat-rE-9wI"/>
+                                                <constraint firstAttribute="width" constant="150" id="bcM-kn-OPy"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="sRP-ld-5YN" firstAttribute="leading" secondItem="Hui-ny-jI8" secondAttribute="leading" id="iS2-RP-Vkv"/>
-                                        <constraint firstItem="sRP-ld-5YN" firstAttribute="top" secondItem="Hui-ny-jI8" secondAttribute="top" id="tSt-8D-ouZ"/>
-                                        <constraint firstItem="CnI-lG-448" firstAttribute="top" secondItem="sRP-ld-5YN" secondAttribute="bottom" id="w7o-Wp-kbj"/>
-                                        <constraint firstAttribute="trailing" secondItem="sRP-ld-5YN" secondAttribute="trailing" id="wVI-qa-tcG"/>
+                                        <constraint firstAttribute="bottom" secondItem="sRP-ld-5YN" secondAttribute="bottom" constant="30" id="3Wc-pV-rlI"/>
+                                        <constraint firstItem="sRP-ld-5YN" firstAttribute="top" secondItem="Hui-ny-jI8" secondAttribute="top" id="3iT-SH-ciF"/>
+                                        <constraint firstAttribute="bottom" secondItem="CnI-lG-448" secondAttribute="bottom" id="I46-7M-rU9"/>
+                                        <constraint firstItem="sRP-ld-5YN" firstAttribute="leading" secondItem="Hui-ny-jI8" secondAttribute="leading" id="Jd2-kY-nAM"/>
+                                        <constraint firstAttribute="trailing" secondItem="CnI-lG-448" secondAttribute="trailing" id="RJD-xO-Q5F"/>
+                                        <constraint firstItem="CnI-lG-448" firstAttribute="leading" secondItem="Hui-ny-jI8" secondAttribute="leading" id="V6F-8i-t4H"/>
+                                        <constraint firstAttribute="trailing" secondItem="sRP-ld-5YN" secondAttribute="trailing" id="k1D-Xf-wBT"/>
+                                        <constraint firstItem="CnI-lG-448" firstAttribute="top" secondItem="Hui-ny-jI8" secondAttribute="top" constant="200" id="kUB-EF-WW9"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
@@ -2999,7 +3006,7 @@ Cg
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rIB-2M-ywj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1888" y="675"/>
+            <point key="canvasLocation" x="1887.9069767441861" y="674.67811158798293"/>
         </scene>
         <!--Featured Detail View Controller-->
         <scene sceneID="nRo-9y-7By">
@@ -3010,7 +3017,10 @@ Cg
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cIb-Lp-OWM">
-                                <rect key="frame" x="0.0" y="0.0" width="403" height="844"/>
+                                <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="922" id="g1s-ao-T6B"/>
+                                </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" id="u7H-1c-icB">
                                 <rect key="frame" x="380" y="20" width="30" height="30"/>
@@ -3034,7 +3044,7 @@ Cg
                             <constraint firstItem="lao-X9-Tl0" firstAttribute="trailing" secondItem="u7H-1c-icB" secondAttribute="trailing" constant="10" id="OVW-6f-eUh"/>
                             <constraint firstItem="u7H-1c-icB" firstAttribute="top" secondItem="lao-X9-Tl0" secondAttribute="top" constant="10" id="QpR-fU-EWW"/>
                             <constraint firstItem="lao-X9-Tl0" firstAttribute="trailing" secondItem="u7H-1c-icB" secondAttribute="trailing" constant="10" id="TqW-qT-dHG"/>
-                            <constraint firstItem="cIb-Lp-OWM" firstAttribute="trailing" secondItem="lao-X9-Tl0" secondAttribute="trailing" id="h1a-s1-wz9"/>
+                            <constraint firstItem="cIb-Lp-OWM" firstAttribute="trailing" secondItem="lao-X9-Tl0" secondAttribute="trailing" constant="27" id="h1a-s1-wz9"/>
                             <constraint firstAttribute="bottom" secondItem="cIb-Lp-OWM" secondAttribute="bottom" id="nMf-U4-kg2"/>
                         </constraints>
                     </view>
