--- a/GP App/Base.lproj/Main.storyboard
+++ b/GP App/Base.lproj/Main.storyboard
@@ -3285,7 +3285,7 @@ Cg
                         <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cIb-Lp-OWM">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cIb-Lp-OWM">
                                 <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="922" id="g1s-ao-T6B"/>
@@ -3297,20 +3297,22 @@ Cg
                                     <constraint firstAttribute="width" constant="30" id="gG0-cT-Bih"/>
                                     <constraint firstAttribute="height" constant="30" id="s5V-b2-r0w"/>
                                 </constraints>
-                                <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
+                                <buttonConfiguration key="configuration" style="filled" image="xmark" catalog="system" cornerStyle="capsule">
                                     <color key="baseBackgroundColor" name="Orange"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="Qz7-d5-7tK" kind="unwind" unwindAction="unwindToMainWithSegue:" id="4Fc-LC-cTr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gm2-gw-YfV" userLabel="More info">
-                                <rect key="frame" x="340" y="10" width="30" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gm2-gw-YfV" userLabel="More info">
+                                <rect key="frame" x="352" y="10" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="Fg3-ag-jUp"/>
                                     <constraint firstAttribute="height" constant="30" id="nBY-5j-pnW"/>
                                 </constraints>
-                                <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule"/>
+                                <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
+                                    <color key="baseBackgroundColor" name="Orange"/>
+                                </buttonConfiguration>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lao-X9-Tl0"/>
@@ -3319,7 +3321,7 @@ Cg
                             <constraint firstItem="lao-X9-Tl0" firstAttribute="trailing" secondItem="u7H-1c-icB" secondAttribute="trailing" constant="10" id="D6P-u3-ZsG"/>
                             <constraint firstItem="cIb-Lp-OWM" firstAttribute="top" secondItem="lao-X9-Tl0" secondAttribute="top" id="S1n-pc-cMl"/>
                             <constraint firstItem="u7H-1c-icB" firstAttribute="top" secondItem="lao-X9-Tl0" secondAttribute="top" constant="10" id="ULA-bW-Eez"/>
-                            <constraint firstItem="u7H-1c-icB" firstAttribute="leading" secondItem="gm2-gw-YfV" secondAttribute="trailing" constant="20" id="X18-YY-c3I"/>
+                            <constraint firstItem="u7H-1c-icB" firstAttribute="leading" secondItem="gm2-gw-YfV" secondAttribute="trailing" constant="8" id="X18-YY-c3I"/>
                             <constraint firstItem="cIb-Lp-OWM" firstAttribute="leading" secondItem="lao-X9-Tl0" secondAttribute="leading" id="ZHa-zl-RWn"/>
                             <constraint firstItem="cIb-Lp-OWM" firstAttribute="trailing" secondItem="lao-X9-Tl0" secondAttribute="trailing" id="i8v-qV-VHe"/>
                             <constraint firstItem="gm2-gw-YfV" firstAttribute="top" secondItem="lao-X9-Tl0" secondAttribute="top" constant="10" id="jnU-zN-JDq"/>
@@ -3547,7 +3549,7 @@ Cg
                         <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nt3-Dr-gbq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nt3-Dr-gbq">
                                 <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TYM-iA-DOn">
@@ -3563,11 +3565,24 @@ Cg
                                     <segue destination="mhl-8w-6Ox" kind="unwind" unwindAction="unwindToMainWithSegue:" id="PWQ-hp-C4B"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9D-od-ro5">
+                                <rect key="frame" x="352" y="10" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="4wu-LR-i2q"/>
+                                    <constraint firstAttribute="height" constant="30" id="9Tc-YC-Hbh"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
+                                    <color key="baseBackgroundColor" name="Orange"/>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="tXL-Yw-jmp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="TYM-iA-DOn" firstAttribute="leading" secondItem="v9D-od-ro5" secondAttribute="trailing" constant="8" id="66A-Wt-iY6"/>
                             <constraint firstAttribute="bottom" secondItem="Nt3-Dr-gbq" secondAttribute="bottom" id="6Mn-2h-RbI"/>
+                            <constraint firstItem="v9D-od-ro5" firstAttribute="top" secondItem="tXL-Yw-jmp" secondAttribute="top" constant="10" id="DPn-IQ-ukB"/>
                             <constraint firstItem="Nt3-Dr-gbq" firstAttribute="top" secondItem="WBU-HB-cVR" secondAttribute="top" id="V3w-mk-ZRc"/>
                             <constraint firstItem="TYM-iA-DOn" firstAttribute="top" secondItem="tXL-Yw-jmp" secondAttribute="top" constant="10" id="bnn-cN-C5z"/>
                             <constraint firstItem="tXL-Yw-jmp" firstAttribute="trailing" secondItem="TYM-iA-DOn" secondAttribute="trailing" constant="10" id="hCj-sW-3D4"/>
@@ -3592,7 +3607,7 @@ Cg
                         <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PEj-1f-7cK">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PEj-1f-7cK">
                                 <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tHu-4u-Gug">
@@ -3608,12 +3623,25 @@ Cg
                                     <segue destination="wNp-iD-yra" kind="unwind" unwindAction="unwindToMainWithSegue:" id="TOk-gE-jjz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UxW-bb-ZyI">
+                                <rect key="frame" x="352" y="10" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="N0r-GY-Z03"/>
+                                    <constraint firstAttribute="height" constant="30" id="l2B-Mh-Abl"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
+                                    <color key="baseBackgroundColor" name="Orange"/>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mUd-j2-XmE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="tHu-4u-Gug" firstAttribute="leading" secondItem="UxW-bb-ZyI" secondAttribute="trailing" constant="8" id="B5h-jf-KuX"/>
                             <constraint firstItem="tHu-4u-Gug" firstAttribute="top" secondItem="mUd-j2-XmE" secondAttribute="top" constant="10" id="CzM-l4-mfV"/>
                             <constraint firstAttribute="bottom" secondItem="PEj-1f-7cK" secondAttribute="bottom" id="M8R-t9-tdf"/>
+                            <constraint firstItem="UxW-bb-ZyI" firstAttribute="top" secondItem="mUd-j2-XmE" secondAttribute="top" constant="10" id="Pzt-Ty-KD6"/>
                             <constraint firstItem="PEj-1f-7cK" firstAttribute="trailing" secondItem="mUd-j2-XmE" secondAttribute="trailing" id="R97-IK-E61"/>
                             <constraint firstItem="mUd-j2-XmE" firstAttribute="trailing" secondItem="tHu-4u-Gug" secondAttribute="trailing" constant="10" id="Sau-40-2YM"/>
                             <constraint firstItem="PEj-1f-7cK" firstAttribute="top" secondItem="QbL-sA-vJB" secondAttribute="top" id="U2g-55-8ab"/>
@@ -3637,7 +3665,7 @@ Cg
                         <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AMP-b4-lQG">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AMP-b4-lQG">
                                 <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJF-Tj-3Zh">
@@ -3653,6 +3681,17 @@ Cg
                                     <segue destination="AmD-5b-7qc" kind="unwind" unwindAction="unwindToMainWithSegue:" id="BAP-Sx-GK2"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghE-uW-VcI">
+                                <rect key="frame" x="352" y="10" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="ieG-MP-KLw"/>
+                                    <constraint firstAttribute="height" constant="30" id="jFJ-sL-VCV"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
+                                    <color key="baseBackgroundColor" name="Orange"/>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QSS-r6-kl4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -3663,6 +3702,8 @@ Cg
                             <constraint firstItem="AMP-b4-lQG" firstAttribute="top" secondItem="Rvc-8b-FKk" secondAttribute="top" id="fL6-pT-e9t"/>
                             <constraint firstItem="AMP-b4-lQG" firstAttribute="leading" secondItem="QSS-r6-kl4" secondAttribute="leading" id="sZT-G7-fkN"/>
                             <constraint firstItem="QSS-r6-kl4" firstAttribute="trailing" secondItem="eJF-Tj-3Zh" secondAttribute="trailing" constant="10" id="ufx-dO-miZ"/>
+                            <constraint firstItem="eJF-Tj-3Zh" firstAttribute="leading" secondItem="ghE-uW-VcI" secondAttribute="trailing" constant="8" id="vIr-Vc-Oqv"/>
+                            <constraint firstItem="ghE-uW-VcI" firstAttribute="top" secondItem="QSS-r6-kl4" secondAttribute="top" constant="10" id="vSW-Co-7sv"/>
                         </constraints>
                     </view>
                     <connections>
@@ -3702,6 +3743,7 @@ Cg
         <image name="photo.fill.on.rectangle.fill" catalog="system" width="128" height="98"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="swift" catalog="system" width="128" height="108"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
