--- a/GP App/Base.lproj/Main.storyboard
+++ b/GP App/Base.lproj/Main.storyboard
@@ -3579,7 +3579,7 @@ Cg
                         <segue destination="49g-Cq-p4P" kind="relationship" relationship="viewControllers" id="l0R-Xv-byh"/>
                         <segue destination="hak-9L-djh" kind="relationship" relationship="viewControllers" id="LlA-DE-7Ug"/>
                         <segue destination="UFq-Ue-0rL" kind="relationship" relationship="viewControllers" id="Qrp-LF-Sky"/>
-                        <segue destination="icJ-pp-Oxy" kind="relationship" relationship="viewControllers" id="2Kh-aX-a4L"/>
+                        <segue destination="8ha-t0-htA" kind="relationship" relationship="viewControllers" id="lAO-Or-3A8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fPR-g2-vOd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -3918,6 +3918,41 @@ Cg
             <point key="canvasLocation" x="1888" y="2782"/>
         </scene>
         <!--The Vault-->
+        <scene sceneID="eKE-cE-mQe">
+            <objects>
+                <tableViewController id="8ha-t0-htA" customClass="VaultTableViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="59G-tE-oQw">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="vaultCell" rowHeight="637" id="GM8-Mm-Zz4" customClass="VaultTableViewCell" customModule="GP_App" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="430" height="637"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GM8-Mm-Zz4" id="RZ1-uP-0JZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="430" height="637"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gNg-ep-7i8">
+                                            <rect key="frame" x="95" y="11" width="240" height="128"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8ha-t0-htA" id="sFh-5B-bGb"/>
+                            <outlet property="delegate" destination="8ha-t0-htA" id="QDg-Ei-c2D"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="The Vault" image="lock.shield.fill" catalog="system" id="Rup-hM-f3q"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C5Y-Up-fid" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1887.9069767441861" y="3490.5579399141634"/>
+        </scene>
+        <!--The Vault-->
         <scene sceneID="F10-uN-KeD">
             <objects>
                 <collectionViewController id="icJ-pp-Oxy" customClass="VaultViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
@@ -3982,7 +4017,7 @@ Cg
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PL8-S9-F4S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1888" y="3480"/>
+            <point key="canvasLocation" x="2682" y="3491"/>
         </scene>
         <!--Vault Detail View Controller-->
         <scene sceneID="SDS-nI-mwc">
@@ -4041,7 +4076,7 @@ Cg
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Cx-xU-Z0b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="tN3-sP-smo" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2681.8604651162791" y="3479.6137339055795"/>
+            <point key="canvasLocation" x="3533" y="3491"/>
         </scene>
         <!--Portrait Detail View Controller-->
         <scene sceneID="gAa-pO-lOV">
